Avoid building a command line with string concatenation